# machine-learning-final-project

./: README.md  pyproject.toml
src/: data_cleaning.ipynb  decision_tree.ipynb  eece_dectree.ipynb  linear_regression.ipynb  support_vector_regression.ipynb
