[tool.poetry]
name = "final_project"
version = "0.1.0"
description = "Exploratory Data Analysis of the 2023 Boston Parcel Assessment Data"
authors = ["bradleybares <bradleygbares@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
ipykernel = "^6.20.2"
scipy = "^1.10.0"
tqdm = "^4.64.1"
plotly = "^5.13.0"
scikit-learn = "^1.2.1"
chart-studio = "^1.1.0"
kaleido = "0.2.1"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
notebook = "^6.5.2"
nbconvert = "^7.2.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
